# monoline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-06-monoline.md  2026-07-07-image-import.md
docs/superpowers/specs/: 2026-07-06-image-import-design.md  2026-07-06-monoline-design.md
monoline/: __init__.py  app.py  bitmap.py  canvas.py  cli.py  config.py  dialogs.py  document.py  help.py  imageconv.py  io.py  media.py  model3d.py  palettes.py  raster.py  reveal.py  shapes.py  smoothing.py  symmetry.py  video.py
scripts/: demo_scene.py  make_gifs.py  make_screenshots.py
tests/: conftest.py  test_app.py  test_bitmap.py  test_cli.py  test_config.py  test_document.py  test_imageconv.py  test_io.py  test_media.py  test_model3d.py  test_palettes.py  test_raster.py  test_reveal.py  test_scripts.py  test_shapes.py  test_smoothing.py  test_symmetry.py  test_video.py
